# cliqa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
src/clint/: checks.py  cli.py  models.py  runner.py
tests/: test_checks.py  test_cli.py  test_cli_ai.py
